Form for Customer Create

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+
+<div id="drawer">Drawer</div>
+
+
+<script>
+
+    let custom = [1,2,3,4]
+
+    let sourceData = []
+    
+    let customMapItems = custom.map(item => [{id: item, title: "Item " + item }])
+
+
+console.log(customMapItems);
+</script>
+
 <div style="margin: 16px;" id="root"></div>
